<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auto-hand-eye-calib</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sarawgi.nikita@gmail.com">nisara</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>hand_eye_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>opencv</depend>
  <depend>Eigen3</depend>
  <depend>Ceres</depend>
  <depend>glog</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>cv_bridge</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
